# podcast-transcriber

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.converter  Dockerfile.transcriber  README.md  coverage.xml  docker-compose.yml  mise.toml  pyproject.converter.toml  pyproject.toml
.github/workflows/: ci.yml  trivy.yml
podcast-transcriber-copy/: .coverage  MANIFEST.in  README.md  pyproject.toml  sonar-project.properties
src/podcast_transcriber/: __init__.py  __main__.py  api.py  config.py  converter_service.py
src/podcast_transcriber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/podcast_transcriber/utils/: __init__.py  converter.py  formatter.py  transcriber.py  warnings_filter.py
tests/: conftest.py  test_api.py  test_config.py  test_converter_service.py  test_formatter.py  test_main.py  test_transcriber.py
