[project]
name = "podcast-transcriber"
version = "0.1.0"
description = "Podcast transcription CLI and API with speaker diarization using WhisperX"
requires-python = ">=3.11,<3.13"
dependencies = [
    "whisperx>=3.1.1",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
transcribe = "podcast_transcriber.__main__:main"
transcribe-api = "podcast_transcriber.api:start"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ["**/.venv/**", "**/tests/**", "**/build/**"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/podcast_transcriber --cov-report=html --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["src/podcast_transcriber"]
omit = ["**/tests/**"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "httpx>=0.27.0",
]
